Importante actualización del curso. (Estamos añadiendo el h1). Hacemos un parón porque se hace necesario ordenar un z-index en el texto sobre el carrusel porque si no, nos quedaría detrás todo el rato. Me di cuenta de que el archivo de estilos de boostrap que se usa en el curso responde correctamente a las instrucciones del curso. Sin embargo, la actualización que se maneja en el momento de este commit no. Así que la solución no es otra que ese z-index.

--- a/index.css
+++ b/index.css
@@ -18,6 +18,29 @@
 
 }
 
+/* Vamos a conformar la manera de añadir el texto un nivel por encima del carrusel
+Para ello hacemos los siguientes ajustes. */
+#carousel {
+  position: relative;
+}
+
+#carousel .overlay {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background-color: rgba(0, 0, 0, .5);
+  /* Con esto hecho, las imágenes ahora se ven más negras. Así contrastarán mejor. */
+  color: white;
+
+  /* En el momento de escribir este código he tenido que añadir esto,
+  esta línea siguiente porque el archivo de estilos de boostrap se ha
+  actualizado y si no se define este parámetro el texto nos quedaría detrás
+  del carrusel. */
+  z-index: 2;
+}
+
 #footer {
   /* Hemos cogido "prestado" el color del footer de Platzi, je, je. */
   background: linear-gradient(90deg, #1c3643 0, #273b47 25%, #1e5372)
